Center play button text when wrapping (fixes #517)

--- a/src/disco/css/App.scss
+++ b/src/disco/css/App.scss
@@ -171,6 +171,7 @@ header {
   color: #fff;
   display: inline-block;
   padding: 10px;
+  text-align: center;
   transition: background 300ms;
 
   &::before {
